<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <!-- Barra de título -->
        <TextView
            android:id="@+id/barraTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:theme="@style/MaterialAlertDialog.Material3.Title.Text"
            android:padding="16dp"/>


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:columnCount="3"
            android:rowCount="3"
            android:padding="8dp">

            <!-- Linha 1 -->
            <Button
                android:id="@+id/btn_00"
                android:contentDescription="@string/tile_00"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_01"
                android:contentDescription="@string/tile_01"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_02"
                android:contentDescription="@string/tile_02"
                style="@style/GridButton" />

            <!-- Linha 2 -->
            <Button
                android:id="@+id/btn_10"
                android:contentDescription="@string/tile_10"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_11"
                android:contentDescription="@string/tile_11"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_12"
                android:contentDescription="@string/tile_12"
                style="@style/GridButton" />

            <!-- Linha 3 -->
            <Button
                android:id="@+id/btn_20"
                android:contentDescription="@string/tile_20"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_21"
                android:contentDescription="@string/tile_21"
                style="@style/GridButton" />
            <Button
                android:id="@+id/btn_22"
                android:contentDescription="@string/tile_22"
                style="@style/GridButton" />

        </GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_message_press_to_start" />

            <Button
                android:id="@+id/btnStartGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start_game" />

            <Button
                android:id="@+id/btnRestartGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_restart_game"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>