<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMenuFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txtContextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_message_press_to_start"/>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_start_game"/>

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/btn_restart_game"/>

</LinearLayout>